@@ -116,3 +116,8 @@ crypto_kdf_hkdf_sha512_bytes_max(void)
 {
     return crypto_kdf_hkdf_sha512_BYTES_MAX;
 }
+
+size_t crypto_kdf_hkdf_sha512_statebytes(void)
+{
+    return sizeof(crypto_kdf_hkdf_sha512_state);
+}
