@@ -228,7 +228,7 @@ xor_buf(unsigned char *out, const unsigned char *in, size_t n)
 
 #ifdef _MSC_VER
 
-# if defined(_M_X64) || defined(_M_AMD64) || defined(_M_IX86)
+# if defined(_M_X64) || defined(_M_IX86)
 #  include <intrin.h>
 
 #  define HAVE_INTRIN_H    1
