@@ -5,7 +5,7 @@ CT='ct.c'
 echo '#include <assert.h>' > "$CT"
 echo '#include <sodium.h>' >> "$CT"
 echo 'int main(void) {' >> "$CT"
-for macro in $(egrep -r '#define crypto_.*BYTES(_[A-Z]+)? ' src/libsodium/include | \
+for macro in $(grep -Er '#define crypto_.*BYTES(_[A-Z]+)? ' src/libsodium/include | \
                cut -d: -f2- | cut -d' ' -f2 | \
                fgrep -v edwards25519sha512batch | sort -u); do
   func=$(echo "$macro" | tr A-Z a-z)
